# manim-ds

./: LICENSE  README.md  custom_config.toml  main.py  requirements.txt  setup.cfg
src/manim_ds/: action.py  animations.py  colours.py  config.py  mlist.py
src/manim_ds/config/: __init__.py  config.py  default_config.toml
src/manim_ds/scene/: __init__.py  action_scene.py  buffered_scene.py  global_buffer.py
src/manim_ds/structures/: __init__.py  _abc.py  mlist.py  pointer.py
