[metadata]
name = manim-ds
version = 0.0.1a1
author = James Finnie-Ansley
url = https://github.com/James-Ansley/manim-ds
description = Manim utilities for creating data structure animations
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License

[options]
include_package_data = True
python_requires = >= 3.10
package_dir=
    = src
packages = find:
install_requires =
    manim~=0.16.0.post0
    tomli~=2.0.1

[options.packages.find]
where = src
